syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.interview.carrecords.service";

message RecordSaveRequest{
  string record_id = 1;
}
message RecordSaveResponse {
  string first_name = 1;
  string last_name = 2;
  string licence_number = 3;
}

service RecordsService {
  rpc saveRecord(RecordSaveRequest) returns (RecordSaveResponse) {};
}